--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test",
+    "postinstall": "ng build --aot --prod",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod",
-    "postinstall": "ng build --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -56,4 +56,5 @@
     "node": "v11.12.0",
     "npm": "6.7.0"
   }
+
 }
